--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #183279;
-    --azul: #6b91f8;
-    --branco: #FFFFFF;
-    --botao-ativo: #50c5e9b0;
-    --botao-inativo: rgba(120, 108, 247, 0.5);
-    --texto-fundo: rgba(122, 183, 233, 0.3);
+    --cor-de-fundo: #2c2b2b;
+    --verm: #ff0000;
+    --branco: #ffffff;
+    --botao-ativo: #740000;
+    --botao-inativo: rgba(143, 9, 9, 0.5);
+    --texto-fundo:rgba(255, 0, 0, 0.719);
 }
 
 body {
@@ -33,7 +33,7 @@ body {
 }
 
 .titulo-principal span {
-    color: var(--cor-de-fundo);
+    color: var(--verm);
 }
 
 
@@ -63,7 +63,7 @@ body {
 
 .botao.ativo{
     background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--verde);
+    border-bottom: 4px solid var(--verm);
 }
 
 .abas-textos{
@@ -85,7 +85,7 @@ body {
 }
 .aba-conteudo-titulo-secundario{
     text-align: center;
-    color: var(--azul);
+    color: var( --branco);
     text-transform: uppercase;
 }
 
@@ -107,7 +107,7 @@ body {
 }
 
 .contador-digito-texto{
-    color: var(--azul);
+    color: var( --branco);
     font-size: 20px;
     margin: 0;
 
@@ -126,3 +126,4 @@ body {
         border-radius: 0 40px 0 0;
     }
 }
+
